kubernetes/matching-service/matching-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-service-deployment
  namespace: lastmile
  labels:
    app: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
      - name: matching-service
        image: imsonu2030/lastmile-matching-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
