kubernetes/matching-service/matching-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: matching-service
  namespace: lastmile
spec:
  selector:
    app: matching-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
